Modified file paths to match directory structure.

--- a/Clustering/Testing K-Means 2.ipynb
+++ b/Clustering/Testing K-Means 2.ipynb
@@ -218,24 +218,40 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.preprocessing import OneHotEncoder, MinMaxScaler, RobustScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from scipy import stats\n",
     "import numpy as np\n",
     "from sklearn.cluster import KMeans\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import silhouette_score\n",
+    "import os\n",
     "\n",
-    "# Load dataset into pandas dataframe\n",
-    "df = pd.read_csv('Summative Data.csv')\n",
+    "# Get the directory of the current script\n",
+    "current_dir = os.path.dirname(os.path.abspath(\"Summative Data.csv\"))\n",
+    "\n",
+    "# Construct the path to the CSV file (one level up)\n",
+    "file_path = os.path.join(current_dir, \"..\", \"Summative Data.csv\")\n",
+    "\n",
+    "# Read the CSV file\n",
+    "df = pd.read_csv(file_path)\n",
     "\n",
     "# Drop unnecessary column\n",
-    "df = df.drop(columns=['ID', 'Unemployed', 'Cr_score', 'Term_deposit', 'Target', 'Tenure', 'Credit_card', 'Acc_length'])  \n",
+    "df = df.drop(\n",
+    "    columns=[\n",
+    "        \"ID\",\n",
+    "        \"Unemployed\",\n",
+    "        \"Cr_score\",\n",
+    "        \"Term_deposit\",\n",
+    "        \"Target\",\n",
+    "        \"Tenure\",\n",
+    "        \"Credit_card\",\n",
+    "        \"Acc_length\",\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "# Normalise continuous variables \n",
-    "normalize_columns = ['Age', 'Kids', 'Total_income', 'Years_employed', 'Balance']\n",
+    "# Normalise continuous variables\n",
+    "normalize_columns = [\"Age\", \"Kids\", \"Total_income\", \"Years_employed\", \"Balance\"]\n",
     "\n",
     "# One-hot encode categorical variables (excluding churn label)\n",
     "df = pd.get_dummies(df, drop_first=True)\n",
@@ -243,20 +259,23 @@
     "# Define ColumnTransformer object with MinMaxScaler method for normalization\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
-    "        ('normalize', MinMaxScaler(), normalize_columns),  \n",
+    "        (\"normalize\", MinMaxScaler(), normalize_columns),\n",
     "    ],\n",
-    "    remainder='passthrough'  # Keep other columns unchanged (including the one-hot encoded columns)\n",
+    "    remainder=\"passthrough\",  # Keep other columns unchanged (including the one-hot encoded columns)\n",
     ")\n",
     "\n",
-    "# Use ColumnTransformer to create an array including normalised data \n",
+    "# Use ColumnTransformer to create an array including normalised data\n",
     "df_transformed = preprocessor.fit_transform(df)\n",
     "\n",
-    "# Convert the array back to a DataFrame \n",
-    "df_transformed = pd.DataFrame(df_transformed, columns=normalize_columns + df.columns.difference(normalize_columns).tolist())\n",
+    "# Convert the array back to a DataFrame\n",
+    "df_transformed = pd.DataFrame(\n",
+    "    df_transformed,\n",
+    "    columns=normalize_columns + df.columns.difference(normalize_columns).tolist(),\n",
+    ")\n",
     "\n",
     "# Remove outliers (rows containing numeric variables with Z-Scores > 3)\n",
-    "numeric_cols = df_transformed.select_dtypes(include=[np.number]) \n",
-    "df_filtered = df_transformed[(np.abs(stats.zscore(numeric_cols)) < 3).all(axis=1)]  \n",
+    "numeric_cols = df_transformed.select_dtypes(include=[np.number])\n",
+    "df_filtered = df_transformed[(np.abs(stats.zscore(numeric_cols)) < 3).all(axis=1)]\n",
     "\n",
     "\"\"\"# List to hold WCSS and silhouette scores\n",
     "wcss = []\n",
@@ -302,62 +321,67 @@
     "clusters = kmeans.fit_predict(df_filtered)\n",
     "\n",
     "# 5. Add the cluster labels back to the filtered DataFrame\n",
-    "df_filtered['Cluster'] = clusters\n",
+    "df_filtered[\"Cluster\"] = clusters\n",
     "\n",
     "# Show the final DataFrame with cluster labels\n",
     "print(df_filtered)\n",
     "\n",
     "# Calculate the variance within each cluster\n",
-    "cluster_variances = df_filtered.groupby('Cluster').var()\n",
+    "cluster_variances = df_filtered.groupby(\"Cluster\").var()\n",
     "\n",
     "# Display the variances for each cluster\n",
     "print(cluster_variances)\n",
     "\n",
     "# 1. Apply PCA to reduce the dataset to 2 components for visualization\n",
     "pca = PCA(n_components=2)\n",
-    "df_pca = pca.fit_transform(df_filtered.drop(columns=['Cluster']))  # Drop the 'Cluster' column before PCA\n",
+    "df_pca = pca.fit_transform(\n",
+    "    df_filtered.drop(columns=[\"Cluster\"])\n",
+    ")  # Drop the 'Cluster' column before PCA\n",
     "\n",
     "# 2. Create a scatter plot\n",
     "plt.figure(figsize=(10, 7))\n",
-    "plt.scatter(df_pca[:, 0], df_pca[:, 1], c=df_filtered['Cluster'], cmap='viridis', s=50)\n",
+    "plt.scatter(df_pca[:, 0], df_pca[:, 1], c=df_filtered[\"Cluster\"], cmap=\"viridis\", s=50)\n",
     "\n",
     "# 3. Add labels and title\n",
-    "plt.xlabel('PCA Component 1')\n",
-    "plt.ylabel('PCA Component 2')\n",
-    "plt.title('Clusters Visualization with PCA')\n",
-    "plt.colorbar(label='Cluster Label')\n",
+    "plt.xlabel(\"PCA Component 1\")\n",
+    "plt.ylabel(\"PCA Component 2\")\n",
+    "plt.title(\"Clusters Visualization with PCA\")\n",
+    "plt.colorbar(label=\"Cluster Label\")\n",
     "\n",
     "# Show the plot\n",
     "plt.show()\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
     "# Reduce to 3 components for 3D visualization\n",
     "pca_3d = PCA(n_components=3)\n",
-    "df_pca_3d = pca_3d.fit_transform(df_filtered.drop(columns=['Cluster']))\n",
+    "df_pca_3d = pca_3d.fit_transform(df_filtered.drop(columns=[\"Cluster\"]))\n",
     "\n",
     "# Create a 3D scatter plot\n",
     "fig = plt.figure(figsize=(10, 7))\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
+    "ax = fig.add_subplot(111, projection=\"3d\")\n",
     "\n",
     "# Scatter plot\n",
-    "ax.scatter(df_pca_3d[:, 0], df_pca_3d[:, 1], df_pca_3d[:, 2], c=df_filtered['Cluster'], cmap='viridis', s=50)\n",
+    "ax.scatter(\n",
+    "    df_pca_3d[:, 0],\n",
+    "    df_pca_3d[:, 1],\n",
+    "    df_pca_3d[:, 2],\n",
+    "    c=df_filtered[\"Cluster\"],\n",
+    "    cmap=\"viridis\",\n",
+    "    s=50,\n",
+    ")\n",
     "\n",
     "# Add labels\n",
-    "ax.set_xlabel('PCA Component 1')\n",
-    "ax.set_ylabel('PCA Component 2')\n",
-    "ax.set_zlabel('PCA Component 3')\n",
-    "plt.title('3D Clusters Visualization with PCA')\n",
+    "ax.set_xlabel(\"PCA Component 1\")\n",
+    "ax.set_ylabel(\"PCA Component 2\")\n",
+    "ax.set_zlabel(\"PCA Component 3\")\n",
+    "plt.title(\"3D Clusters Visualization with PCA\")\n",
     "\n",
     "plt.show()\n",
     "\n",
     "# Group by 'Cluster' and calculate the mean of 'Exited' for each cluster\n",
-    "prevalence = df_filtered.groupby('Cluster')['Exited'].mean()\n",
+    "prevalence = df_filtered.groupby(\"Cluster\")[\"Exited\"].mean()\n",
     "\n",
     "# Display the prevalence\n",
-    "print(prevalence)\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(prevalence)"
    ]
   }
  ],
