--- a/Exploratory Data Analysis/Testing EDA.ipynb
+++ b/Exploratory Data Analysis/Testing EDA.ipynb
@@ -20,72 +20,107 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
     "\n",
-    "# Load the data\n",
-    "df = pd.read_csv('Summative Data.csv')\n",
+    "# Get the directory of the current script\n",
+    "current_dir = os.path.dirname(os.path.abspath(\"Summative Data.csv\"))\n",
+    "\n",
+    "# Construct the path to the CSV file (one level up)\n",
+    "file_path = os.path.join(current_dir, \"..\", \"Summative Data.csv\")\n",
+    "\n",
+    "# Read the CSV file\n",
+    "df = pd.read_csv(file_path)\n",
     "\n",
     "# Create a 2x2 grid of subplots\n",
     "fig, axes = plt.subplots(2, 2, figsize=(15, 12))\n",
     "\n",
     "# Churn by Geography\n",
-    "sns.countplot(data=df, x='Geography', hue='Exited', palette='Set1', ax=axes[0, 0])\n",
-    "axes[0, 0].set_title('a.) Churn by Geography')\n",
-    "axes[0, 0].set_xlabel('Geography')\n",
-    "axes[0, 0].set_ylabel('Number of Customers')\n",
-    "axes[0, 0].legend(title='Exited', loc='upper right', labels=['Not Exited (0)', 'Exited (1)'])\n",
+    "sns.countplot(data=df, x=\"Geography\", hue=\"Exited\", palette=\"Set1\", ax=axes[0, 0])\n",
+    "axes[0, 0].set_title(\"a.) Churn by Geography\")\n",
+    "axes[0, 0].set_xlabel(\"Geography\")\n",
+    "axes[0, 0].set_ylabel(\"Number of Customers\")\n",
+    "axes[0, 0].legend(\n",
+    "    title=\"Exited\", loc=\"upper right\", labels=[\"Not Exited (0)\", \"Exited (1)\"]\n",
+    ")\n",
     "\n",
     "# Churn by Gender\n",
-    "sns.countplot(data=df, x='gender', hue='Exited', palette='Set1', ax=axes[0, 1])\n",
-    "axes[0, 1].set_title('b.) Churn by Gender')\n",
-    "axes[0, 1].set_xlabel('Gender')\n",
-    "axes[0, 1].set_ylabel('Number of Customers')\n",
-    "axes[0, 1].legend(title='Exited', loc='upper right', labels=['Not Exited (0)', 'Exited (1)'])\n",
+    "sns.countplot(data=df, x=\"gender\", hue=\"Exited\", palette=\"Set1\", ax=axes[0, 1])\n",
+    "axes[0, 1].set_title(\"b.) Churn by Gender\")\n",
+    "axes[0, 1].set_xlabel(\"Gender\")\n",
+    "axes[0, 1].set_ylabel(\"Number of Customers\")\n",
+    "axes[0, 1].legend(\n",
+    "    title=\"Exited\", loc=\"upper right\", labels=[\"Not Exited (0)\", \"Exited (1)\"]\n",
+    ")\n",
     "\n",
     "# Create age bins and convert to string\n",
-    "df['age_bins'] = pd.qcut(df['age'], q=7, duplicates='drop')\n",
+    "df[\"age_bins\"] = pd.qcut(df[\"age\"], q=7, duplicates=\"drop\")\n",
     "\n",
     "# Convert bins to strings for sorting\n",
-    "df['age_bins'] = df['age_bins'].astype(str)\n",
+    "df[\"age_bins\"] = df[\"age_bins\"].astype(str)\n",
     "\n",
     "# Ensure age bins are sorted correctly\n",
-    "df['age_bins'] = pd.Categorical(df['age_bins'], categories=sorted(df['age_bins'].unique(), key=lambda x: float(x.split(',')[0][1:])), ordered=True)\n",
+    "df[\"age_bins\"] = pd.Categorical(\n",
+    "    df[\"age_bins\"],\n",
+    "    categories=sorted(\n",
+    "        df[\"age_bins\"].unique(), key=lambda x: float(x.split(\",\")[0][1:])\n",
+    "    ),\n",
+    "    ordered=True,\n",
+    ")\n",
     "\n",
     "# Plot Age Distribution\n",
-    "sns.histplot(data=df, x='age_bins', hue='Exited', multiple='stack', shrink=0.8, palette='Set1', ax=axes[1, 0])\n",
-    "axes[1, 0].set_xlabel('Age (Equal Frequency Bins)')\n",
-    "axes[1, 0].set_ylabel('Count')\n",
-    "axes[1, 0].set_title('c.) Distribution of Age (Equal Frequency Bins) for Exited and Not Exited Customers')\n",
-    "axes[1, 0].legend(title='Exited', labels=['Not Exited (0)', 'Exited (1)'])\n",
-    "axes[1, 0].tick_params(axis='x', rotation=45)\n",
+    "sns.histplot(\n",
+    "    data=df,\n",
+    "    x=\"age_bins\",\n",
+    "    hue=\"Exited\",\n",
+    "    multiple=\"stack\",\n",
+    "    shrink=0.8,\n",
+    "    palette=\"Set1\",\n",
+    "    ax=axes[1, 0],\n",
+    ")\n",
+    "axes[1, 0].set_xlabel(\"Age (Equal Frequency Bins)\")\n",
+    "axes[1, 0].set_ylabel(\"Count\")\n",
+    "axes[1, 0].set_title(\n",
+    "    \"c.) Distribution of Age (Equal Frequency Bins) for Exited and Not Exited Customers\"\n",
+    ")\n",
+    "axes[1, 0].legend(title=\"Exited\", labels=[\"Not Exited (0)\", \"Exited (1)\"])\n",
+    "axes[1, 0].tick_params(axis=\"x\", rotation=45)\n",
     "\n",
     "# Create balance bins\n",
-    "df['balance_bins'] = pd.qcut(df['balance'], q=4, duplicates='drop')\n",
+    "df[\"balance_bins\"] = pd.qcut(df[\"balance\"], q=4, duplicates=\"drop\")\n",
     "\n",
     "# Convert balance bins to strings for plotting\n",
-    "df['balance_bins'] = df['balance_bins'].astype(str)\n",
+    "df[\"balance_bins\"] = df[\"balance_bins\"].astype(str)\n",
     "\n",
     "# Sort balance bins for plotting\n",
-    "df['balance_bins'] = pd.Categorical(df['balance_bins'], categories=sorted(df['balance_bins'].unique(), key=lambda x: float(x.split(',')[0][1:])), ordered=True)\n",
+    "df[\"balance_bins\"] = pd.Categorical(\n",
+    "    df[\"balance_bins\"],\n",
+    "    categories=sorted(\n",
+    "        df[\"balance_bins\"].unique(), key=lambda x: float(x.split(\",\")[0][1:])\n",
+    "    ),\n",
+    "    ordered=True,\n",
+    ")\n",
     "\n",
     "# Plot Balance Distribution\n",
-    "sns.histplot(data=df, x='balance_bins', hue='Exited', multiple='stack', shrink=0.8, palette='Set1', ax=axes[1, 1])\n",
-    "axes[1, 1].set_xlabel('Balance (Equal Frequency Bins)')\n",
-    "axes[1, 1].set_ylabel('Count')\n",
-    "axes[1, 1].set_title('d.) Distribution of Balance (Equal Frequency Bins) for Exited and Not Exited Customers')\n",
-    "axes[1, 1].legend(title='Exited', labels=['Not Exited (0)', 'Exited (1)'])\n",
-    "axes[1, 1].tick_params(axis='x', rotation=45)\n",
+    "sns.histplot(\n",
+    "    data=df,\n",
+    "    x=\"balance_bins\",\n",
+    "    hue=\"Exited\",\n",
+    "    multiple=\"stack\",\n",
+    "    shrink=0.8,\n",
+    "    palette=\"Set1\",\n",
+    "    ax=axes[1, 1],\n",
+    ")\n",
+    "axes[1, 1].set_xlabel(\"Balance (Equal Frequency Bins)\")\n",
+    "axes[1, 1].set_ylabel(\"Count\")\n",
+    "axes[1, 1].set_title(\n",
+    "    \"d.) Distribution of Balance (Equal Frequency Bins) for Exited and Not Exited Customers\"\n",
+    ")\n",
+    "axes[1, 1].legend(title=\"Exited\", labels=[\"Not Exited (0)\", \"Exited (1)\"])\n",
+    "axes[1, 1].tick_params(axis=\"x\", rotation=45)\n",
     "\n",
     "# Adjust layout\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "plt.show()"
    ]
   }
  ],
